fix span : class visibility

--- a/src/app/pages/user/profile/profile.component.scss
+++ b/src/app/pages/user/profile/profile.component.scss
@@ -3,3 +3,15 @@
   margin-bottom: 1rem;
 }
 
+.profile-badge {
+  min-width: 0.5rem;  // ou la largeur exacte de ton badge
+  min-height: 0.5rem; // idem pour la hauteur
+  display: inline-block;
+  vertical-align: middle;
+}
+.profile-badge.invisible {
+  visibility: hidden;
+}
+.profile-badge.visible {
+  visibility: visible;
+}
